--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,6 @@
         {% endif %}
     </head>
     <body>
-        {{% block content %}}{{% end block %}}
+        {% block content %}{% endblock %}
     </body>
 </html>
