--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,13 @@
 {% block content %}
 
     {% for listing in listings %}
-        <h1>{{ listing.office }}</h1>
-        <p>By {{ listing.agent }} on {{ listing.date }}</p>
-        <p>{{ listing.bathrooms }}</p>
+        <h1>A new house has been listed!</h1>
+        <p>Seller Name: {{ listing.seller }}</p>
+        <p>The house has: {{ listing.bedrooms }} bedrooms and {{ listing.bathrooms }} bathrooms</p>
+        <p>The current price is ${{ listing.price }}</p>
+        <p>The zip code is {{ listing.zipcode }}</p>
+        <p>This house was listed on {{ listing.date }}</p>
+        <p>Listed by {{ listing.agent }} from The {{ listing.office }} Real Estate Office</p>
 
     {% endfor %}
 {% endblock content %}
