--- a/real_estate/templates/home.html
+++ b/real_estate/templates/home.html
@@ -1,4 +1,10 @@
 {% extends "layout.html" %}
+
+{% block navigation%}
+<a class="nav-item nav-link" href="{{ url_for('about') }}" style="color:blue">About</a>
+<a class="nav-item nav-link" href="{{ url_for('new_listing') }}" style="color:blue">Create Listing</a>
+{% endblock navigation %}
+
 {% block content %}
 
     {% for listing in listings %}
