🐛 it's working, but not how I want it to work

--- a/real_estate/templates/create_listing.html
+++ b/real_estate/templates/create_listing.html
@@ -2,7 +2,7 @@
 
 {% block navigation%}
 <a class="nav-item nav-link" href="{{ url_for('home') }}" style="color:blue">Home</a>
-<a class="nav-item nav-link" href="{{ url_for('new_listing') }}" style="color:blue">Create Listing</a>
+<a class="nav-item nav-link" href="{{ url_for('about') }}" style="color:blue">About</a>
 {% endblock navigation %}
 
 {% block content %}
