--- a/real_estate/templates/home.html
+++ b/real_estate/templates/home.html
@@ -14,7 +14,7 @@
         <p>The current price is ${{ listing.price }}</p>
         <p>The zip code is {{ listing.zipcode }}</p>
         <p>This house was listed on {{ listing.date }}</p>
-        <p>Listed by {{ listing.agent }} from The {{ listing.office }} Real Estate Office</p>
+        <p>Listed by agent {{ listing.agent }} from The {{ listing.office }} Real Estate Office</p>
 
     {% endfor %}
 {% endblock content %}
