--- a/real_estate/templates/create_listing.html
+++ b/real_estate/templates/create_listing.html
@@ -25,6 +25,19 @@
                 {% endif %}
             </div>
             <div class="form-group">
+                {{ form.price.label(class="form-control-label") }}
+                {% if form.price.errors %}
+                    {{ form.price(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.price.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.price(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
                 {{ form.bathrooms.label(class="form-control-label") }}
                 {% if form.bathrooms.errors %}
                     {{ form.bathrooms(class="form-control form-control-lg is-invalid") }}
