--- a/real_estate/templates/create_listing.html
+++ b/real_estate/templates/create_listing.html
@@ -2,7 +2,7 @@
 
 {% block navigation%}
 <a class="nav-item nav-link" href="{{ url_for('home') }}" style="color:blue">Home</a>
-<a class="nav-item nav-link" href="{{ url_for('about') }}" style="color:blue">About</a>
+<a class="nav-item nav-link" href="{{ url_for('registered_agents') }}" style="color:blue">Registered Agents</a>
 {% endblock navigation %}
 
 {% block content %}
@@ -109,4 +109,3 @@
     </form>
 </div>
 {% endblock content %}
-
