🗃 shows the name of the agent

--- a/real_estate/templates/layout.html
+++ b/real_estate/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Required meta tags -->
-        <meta charset="utf-8">s
+        <meta charset="utf-8">
         <meta name="viewport" bedrooms="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
