🗃 summary table of all sale prices

--- a/real_estate/templates/layout.html
+++ b/real_estate/templates/layout.html
@@ -59,7 +59,7 @@
                     <br>
                   <p class='text-muted'>Real Estate Offices
                     <ul class="list-group">
-                      <li class="list-group-item list-group-item-light">Tenderloin</li>
+                      <li class="list-group-item list-group-item-light"><a href="{{ url_for('summary') }}">Summary of all Sale Prices</a></li>
                       <li class="list-group-item list-group-item-light">Hayes Valley</li>
                       <li class="list-group-item list-group-item-light">Oakland</li>
                     </ul>
